@@ -1,0 +1,3 @@
+<%= f.label field.name %>
+
+<%= t("administrate.fields.polymorphic.not_supported") %>
